--- a/electron-quick-start-es6/package.json
+++ b/electron-quick-start-es6/package.json
@@ -2,7 +2,7 @@
   "name": "electron-quick-start",
   "version": "1.0.0",
   "description": "A minimal Electron application",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "electron .",
     "dev": "webpack-dev-server --no-info --quiet --port 4001 --config webpack.config.js"
@@ -23,12 +23,14 @@
     "url": "https://github.com/electron/electron-quick-start/issues"
   },
   "homepage": "https://github.com/electron/electron-quick-start#readme",
+  "dependencies": {
+    "electron": "^1.8.2-beta.2"
+  },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "electron": "1.5.1",
-    "webpack": "^1.13.2",
+    "@types/node": "^8.5.1",
+    "awesome-typescript-loader": "^3.4.1",
+    "typescript": "^2.1.5",
+    "webpack": "2.2",
     "webpack-dev-server": "^1.16.1"
   }
 }
