--- a/electron-quick-start-es6/.vscode/launch.json
+++ b/electron-quick-start-es6/.vscode/launch.json
@@ -1,31 +1,36 @@
 {
   "version": "0.2.0",
   "configurations": [
-    {
-      "name": "Debug Main Process",
-      "type": "node",
-      "request": "launch",
-      "cwd": "${workspaceRoot}",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-      "windows": {
-        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
+      {
+          "name": "Run Electron",
+          "type": "chrome",
+          "request": "launch",
+          "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+          "runtimeArgs": [
+              "${workspaceRoot}/dist/main.js",
+              "--remote-debugging-port=9222"
+          ],
+          "sourceMaps": true,
+          "webRoot": "${workspaceRoot}",
+          "sourceMapPathOverrides": {
+            "webpack:///./*": "${webRoot}/*"
+          }
       },
-      "program": "${workspaceRoot}/dist/main.js"
-    },
-    {
-      "name": "Electron: Debug Renderer Process",
-      "type": "chrome",
-      "request": "launch",
-      "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
-      "windows": {
-        "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron.cmd"
-      },
-      "runtimeArgs": [
-        "http://localhost:4001",
-        "--remote-debugging-port=9222"
-      ],
-      "sourceMaps": true,
-      "webRoot": "${workspaceRoot}"
-    }
+      {
+          "name": "Debug Electron",
+          "type": "chrome",
+          "request": "launch",
+          "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
+          "runtimeArgs": [
+              "${workspaceRoot}/dist/main.js",
+              "--remote-debugging-port=9222"
+           ],
+           "sourceMaps": true,
+           "webRoot": "${workspaceRoot}",
+           "sourceMapPathOverrides": {
+             "webpack:///./*": "${webRoot}/*"
+           },
+          "preLaunchTask": "build"
+      }
   ]
 }
