--- a/electron-quick-start-es6/package.json
+++ b/electron-quick-start-es6/package.json
@@ -4,8 +4,9 @@
   "description": "A minimal Electron application",
   "main": "dist/main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "webpack-dev-server --no-info --quiet --port 4001 --config webpack.config.js"
+    "build": "webpack --config webpack.config && tsc",
+    "start": "webpack-dev-server --no-info --quiet --port 4001 --config webpack.config.js",
+    "watch": "webpack --watch --config webpack.config && tsc"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,9 @@
   "devDependencies": {
     "@types/node": "^8.5.1",
     "awesome-typescript-loader": "^3.4.1",
+    "html-webpack-plugin": "^2.30.1",
     "typescript": "^2.1.5",
-    "webpack": "2.2",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   }
 }
